# xcore-ia

./: .gitignore  README.md  agent.py  agentic.py  cli.py  config.py  embeddings.py  generator.py  indexer.py  llm.py  main.py  makefile  pyproject.toml  requirements.txt  retriever.py  serve.py  xcore_ai.yaml
data/vector_db/68849da6-ddfa-438b-adb8-f09b83b67b79/: index_metadata.pickle
data/vector_db/ef1735f0-ee5a-40fa-af20-e63f13d68bf9/: index_metadata.pickle
dataset/: builder.py  lora_config.py  xcore_train.json  xcore_train.jsonl
examples/: claude.json
history/: xcore_ai_history.json
templates/: index.html
tools/: executor.py
